--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,10 @@ urllib3==1.24.3
 validate-email==1.3
 virtualenv==16.6.0
 pre-commit==1.17.0
-wheel==0.33.04
+wheel >= 0.31.0
 pip=19.1.1
-Twine==1.13.0
+twine >= 1.11.0
+setuptools >= 38.6.0
 bleach==3.1.0
 pkginfo==1.5.0.1
 readme-renderer==24.0
