load database and testing

--- a/new_MFC/test/results/gear_curves_n_gs_from_poly.yaml
+++ b/new_MFC/test/results/gear_curves_n_gs_from_poly.yaml
@@ -1045,7 +1045,7 @@ top_speed: 50
 transmission: manual
 type_of_car: hatchback
 use_cubic: False
-use_linear_gs: false
+use_linear_gs: False
 veh_mass: 955.0
 veh_max_speed: 50
 wheelbase: 2.3
