--- a/tests/results/gear_4degree_curves_with_linear_gs.yaml
+++ b/tests/results/gear_4degree_curves_with_linear_gs.yaml
@@ -5509,7 +5509,7 @@ driveline_efficiency: 0.9
 driveline_slippage: 0
 engine_max_power: 59.0
 engine_max_speed_at_max_power: 5500.0
-final_drive: 3.87
+final_drive_ratio: 3.87
 fuel_type: petrol
 full_load_powers: !!python/object/apply:numpy.core.multiarray._reconstruct
   args:
