--- a/tests/results/sample_gear_shifting.yaml
+++ b/tests/results/sample_gear_shifting.yaml
@@ -3383,7 +3383,7 @@ driveline_efficiency: 0.93
 driveline_slippage: 0
 engine_max_power: 44.0
 engine_max_speed_at_max_power: 6250.0
-final_drive: 4.5
+final_drive_ratio: 4.5
 fuel_type: petrol
 full_load_speeds: !!python/object/apply:numpy.core.multiarray._reconstruct
   args:
