--- a/tests/results/get_ev_curve_main.yaml
+++ b/tests/results/get_ev_curve_main.yaml
@@ -15,9 +15,9 @@ Alimit: !!python/object/apply:numpy.core.multiarray.scalar
   - 0
 - !!binary |
   iIPTkbVRE0A=
-Start:
+start:
 - 0
-Stop:
+stop:
 - 37
 car_height: 1.466
 car_type: 2
