--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ validate-email==1.3
 virtualenv==16.6.0
 pre-commit==1.17.0
 wheel >= 0.31.0
-pip=19.1.1
+pip==19.1.1
 twine >= 1.11.0
 setuptools >= 38.6.0
 bleach==3.1.0
