--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,7 +6,6 @@ dependencies:
   - beautifulsoup4
   - docutils
   - flask
-  - schedula>=0.3.2'
   - jupyterlab >=0.35.5,<0.36
   - lxml
   - multiprocess
@@ -23,4 +22,5 @@ dependencies:
   - plotly
   - tornado<6
   - pip:
+      - schedula>=0.3.2
       - jupyter-server-proxy
