--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - beautifulsoup4
   - docutils
   - flask
+  - schedula>=0.3.2'
   - jupyterlab >=0.35.5,<0.36
   - lxml
   - multiprocess
