--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -21,7 +21,7 @@ dependencies:
   - python-graphviz
   - regex
   - plotly
-  - tornado<6
+  - tornado==4.5.3
   - pip:
       - git+https://github.com/ashenafimenza/binder_co2mpas_driver.git@master
       - schedula>=0.3.2
