--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - multiprocess
   - networkx
   - pandas
-  - yaml
+  - pyyaml
   - matplotlib==3.1.0
   - numpy >=1.15
   - openpyxl
