--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - jupyterlab >=0.35.5,<0.36
   - lxml
   - multiprocess
-  - networkx
+  - networkx >=2.0.0,<2.4
   - pandas
   - pyyaml
   - matplotlib==3.1.0
